--- a/E-commerce/store/templates/store/index.html
+++ b/E-commerce/store/templates/store/index.html
@@ -1,5 +1,7 @@
 {% extends 'store/layouts/main.html' %} {% block content %}
 
-<h1>Hello World</h1>
+{% include 'store/inc/slider.html' %}
+
+<h1>Hello world</h1>
 
 {% endblock content %}
