--- a/E-commerce/store/templates/store/inc/slider.html
+++ b/E-commerce/store/templates/store/inc/slider.html
@@ -5,22 +5,19 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img class="d-block w-100 h-50 d-inline-block"
-                 height
-                 400px
+                 height = "400px"
                  src="{% static 'images/c-d-x-PDX_a_82obo-unsplash.jpg' %}"
                  alt="First slide">
         </div>
         <div class="carousel-item ">
             <img class="d-block w-100 h-50 d-inline-block"
-                 height
-                 400px
+                 height = "400px"
                  src="{% static 'images/pexels-alex-andrews-821651.jpg' %}"
                  alt="Second slide">
         </div>
         <div class="carousel-item ">
             <img class="d-block w-100 h-50 d-inline-block"
-                 height
-                 400px
+                 height = "400px"
                  src="{% static 'images/pexels-gabriel-freytez-341523.jpg' %}"
                  alt="Third slide">
         </div>
