--- a/E-commerce/store/templates/store/products/view.html
+++ b/E-commerce/store/templates/store/products/view.html
@@ -2,10 +2,18 @@
 {% block content %}
     <div class= "py-3 bg-primary">
         <div class= "container">
-            <a class='text-white' style="text-decoration: none;" href='{% url 'home' %}'>Home /</a>
-            <a class='text-white' style="text-decoration: none;" href='{% url 'collections' %}'>Collections /</a>
-            <a class='text-white' style="text-decoration: none;" href='{% url 'collectionsview' products.category.slug %}'>{{ products.category.name }} /</a>
-            <a class='text-white' style="text-decoration: none;" href='{% url 'productview' products.category.slug products.slug %}'>{{ products.name }}</a>
+            <a class='text-white'
+               style="text-decoration: none;"
+               href='{% url 'home' %}'>Home /</a>
+            <a class='text-white'
+               style="text-decoration: none;"
+               href='{% url 'collections' %}'>Collections /</a>
+            <a class='text-white'
+               style="text-decoration: none;"
+               href='{% url 'collectionsview' products.category.slug %}'>{{ products.category.name }} /</a>
+            <a class='text-white'
+               style="text-decoration: none;"
+               href='{% url 'productview' products.category.slug products.slug %}'>{{ products.name }}</a>
         </div>
     </div>
     <div class="py-5">
@@ -17,19 +25,9 @@
                             <div class= "row">
                                 <div class= "col-md-4">
                                     {% if products.tag %}
-                                    <label style='background-color:red;
-                                    color:#fff;
-                                    font-size:11px;
-                                    line-height:1;
-                                    position:absolute;
-                                    text-align:center;
-                                    text-transform:uppercase;
-                                    top:22px;
-                                    magin-left:17.5rem;
-                                    padding: 7px 10px;
-                                    font-weight:600;
-                                    min-width:45px;
-                                  }'>{{ products.tag }}</label>
+                                        <label style='background-color:red; color:#fff; font-size:11px; line-height:1; position:absolute; text-align:center; text-transform:uppercase; top:22px; magin-left:17.5rem; padding: 7px 10px; font-weight:600; min-width:45px; }'>
+                                            {{ products.tag }}
+                                        </label>
                                     {% endif %}
                                     <img src="{{ products.product_image.url }}" class='w-100' alt='image'>
                                 </div>
@@ -37,16 +35,15 @@
                                     <h2 class='mb-0'>
                                         {{ products.name }}
                                         {% if products.trending %}
-                                            <label style="font-size:16px" class="float-end badge bg-warning trending-tag"> Trending </label>
+                                            <label style="font-size:16px"
+                                                   class="float-end badge bg-warning trending-tag">Trending</label>
                                         {% endif %}
                                     </h2>
                                     <hr>
                                     <label class = "me-3">
                                         Original Price : <s>{{ products.original_price | stringformat:'d' }} Egp</s>
                                     </label>
-                                    <label class = "fw-bold">
-                                        Selling Price : {{ products.selling_price | stringformat:'d' }} Egp
-                                    </label>
+                                    <label class = "fw-bold">Selling Price : {{ products.selling_price | stringformat:'d' }} Egp</label>
                                     <p class="mt-3">
                                         {{ products.small_description }}
                                     </p>
@@ -60,9 +57,11 @@
                                         <div class="col-md-3">
                                             <label for="Quantity">Quantity</label>
                                             <div class="input-group text-center mb-3" style="width:130px;">
-                                                
                                                 <button class="input-group-text decrement-btn">-</button>
-                                                <input type="text" name='quantity' class="form-control qty-input text-center" value="1">
+                                                <input type="text"
+                                                       name='quantity'
+                                                       class="form-control qty-input text-center"
+                                                       value="1">
                                                 <button class="input-group-text increment-btn">+</button>
                                             </div>
                                         </div>
@@ -70,28 +69,27 @@
                                             <br />
                                             {% if products.quantity > 0 %}
                                                 <button class="btn btn-primary me-3 float-start">
-                                                    Add ot Cart<i class="fa fa-shopping-cart"></i>
+                                                    Add to Cart<i class="fa fa-shopping-cart"></i>
                                                 </button>
                                             {% endif %}
                                             <button class="btn btn-primary me-3 float-start">
-                                                Add ot Wishlist<i class="fa fa-heart"></i>
+                                                Add to Wishlist<i class="fa fa-heart"></i>
                                             </button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                             <div class="col-md-12">
                                 <hr>
                                 <h3>Description</h3>
                                 <p class="mt-3">
                                     {{ products.description }}
                                 </p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock content %}
