--- a/E-commerce/store/templates/store/auth/login.html
+++ b/E-commerce/store/templates/store/auth/login.html
@@ -14,11 +14,11 @@
                                 <hr>
                                 <div class="form-group">
                                     <label for="">Username:</label>
-                                   <input type="text">
+                                   <input type="text" class="form-control" name="username" placeholder="Enter Username">
                                 </div>
                                 <div class="form-group">
                                     <label for="">password:</label>
-                                    <input type="password">
+                                    <input type="password" class="form-control" name="password" placeholder="Enter password">
                                 </div>
                                 <button type="submit" class="btn float-end shadow btn-success px-4">Login</button>
                             </form>
