jquery updates and code refactor

--- a/E-commerce/store/templates/store/products/view.html
+++ b/E-commerce/store/templates/store/products/view.html
@@ -70,7 +70,7 @@
                                         <div calss="col-md-9">
                                             <br />
                                             {% if products.quantity > 0 %}
-                                                <button class="btn btn-primary me-3 float-start addToCartBtn">
+                                                <button class="btn btn-primary me-3 float-start add-to-cart-btn">
                                                     Add to Cart<i class="fa fa-shopping-cart"></i>
                                                 </button>
                                             {% endif %}
