--- a/E-commerce/store/templates/store/cart.html
+++ b/E-commerce/store/templates/store/cart.html
@@ -3,7 +3,7 @@
     <div class= "py-3 bg-primary">
         <div class= "container">
             <a class="text-white" href="{% url 'home' %}"> Home </a>
-            <a class="text-white" href="{% url 'cart' %}">Cart /</a>
+            <a class="text-white" href="{% url 'cart' %}">cart /</a>
         </div>
     </div>
     <div class="py-5">
