--- a/E-commerce/store/templates/store/cart.html
+++ b/E-commerce/store/templates/store/cart.html
@@ -42,7 +42,7 @@
                                         {% endif %}
                                     </div>
                                     <div class="col-md-2 my-auto">
-                                        <button class="btn btn-danger delete-cart-item"> <i class="fa fa-trash"></i> Remove </button>
+                                        <button class="btn btn-danger delete-cart-item"> <i class="fa fa-trash m-1" ></i> Remove </button>
                                     </div>
 
 
