--- a/E-commerce/store/templates/store/layouts/main.html
+++ b/E-commerce/store/templates/store/layouts/main.html
@@ -10,16 +10,14 @@
             {% endblock title %}
         </title>
         <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-              rel="stylesheet"
-              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-              crossorigin="anonymous">
+        {% comment %} flat-icons {% endcomment %}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        {% comment %} bootstrap {% endcomment %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"rel="stylesheet"integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"
-              rel="stylesheet">
-        <link rel="stylesheet"
-              href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap"rel="stylesheet">
+        <link rel="stylesheet"href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>
         <link rel="stylesheet"
               href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/default.min.css"/>
         <style>
@@ -54,6 +52,7 @@
         <script src="{% static '/js/jquery-3.6.0.min.js' %}"></script>
         <script src="{% static '/js/custom.js' %}"></script>
 
+
         {% comment %} jquery {% endcomment %}
         <script
         src="https://code.jquery.com/jquery-3.6.0.min.js"integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
@@ -65,6 +64,7 @@
 
         {% comment %} alertify {% endcomment %}
         <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+        
 
         <script>
         alertify.set('notifier','position', 'top-right');
