--- a/E-commerce/store/templates/store/products/view.html
+++ b/E-commerce/store/templates/store/products/view.html
@@ -43,7 +43,7 @@
                                     <label class = "me-3">
                                         Original Price : <s>{{ products.original_price | stringformat:'d' }} Egp</s>
                                     </label>
-                                    <label class = "fw-bold">Selling Price : {{ products.selling_price | stringformat:'d' }} Egp</label>
+                                    <label class = "fw-bold">Selling Price : {{ products.selling_price | stringformat:'d' }} EGP</label>
                                     <p class="mt-3">
                                         {{ products.small_description }}
                                     </p>
@@ -67,15 +67,15 @@
                                                 <button class="input-group-text increment-btn">+</button>
                                             </div>
                                         </div>
-                                        <div calss="col-md-9">
+                                        <div class="col-md-9">
                                             <br />
                                             {% if products.quantity > 0 %}
                                                 <button class="btn btn-primary me-3 float-start add-to-cart-btn">
-                                                    Add to Cart<i class="fa fa-shopping-cart"></i>
+                                                    Add to Cart<i class="fa fa-shopping-cart m-1"></i>
                                                 </button>
                                             {% endif %}
                                             <button class="btn btn-primary me-3 float-start">
-                                                Add to Wishlist<i class="fa fa-heart"></i>
+                                                Add to Wishlist<i class="fa fa-heart m-1"></i>
                                             </button>
                                         </div>
                                     </div>
