added logo and fixed fron end forms

--- a/E-commerce/store/templates/store/auth/login.html
+++ b/E-commerce/store/templates/store/auth/login.html
@@ -12,15 +12,19 @@
                                     <h4>Login</h4>
                                 </div>
                                 <hr>
-                                <div class="form-group">
-                                    <label for="">Username:</label>
+                                <div class="form-outline mb-4">
+                                    <label class="form-label" for="form2Example1">Username</label>
                                    <input type="text" class="form-control" name="username" placeholder="Enter Username">
                                 </div>
-                                <div class="form-group">
-                                    <label for="">password:</label>
+                                <div  class="form-outline mb-4">
+                                    <label class="form-label" for="form2Example2">Password</label>
                                     <input type="password" class="form-control" name="password" placeholder="Enter password">
                                 </div>
-                                <button type="submit" class="btn float-end shadow btn-success px-4">Login</button>
+                                <button type="submit" class="btn btn-primary btn-block form-control">Sign in</button>
+
+                                <div class="text-center mt-4">
+                                    <p>Not a member? <a href="{%url 'register'%}">Register</a></p>
+                                </div>
                             </form>
                         </div>
                     </div>
