--- a/E-commerce/store/templates/store/auth/register.html
+++ b/E-commerce/store/templates/store/auth/register.html
@@ -12,35 +12,35 @@
                                     <h4>Registeration Form</h4>
                                 </div>
                                 <hr>
-                                <div class="form-group">
-                                    <label for="">Username:</label>
+                                <div class="form-outline mb-4">
+                                    <label for="">Username</label>
                                     {{ form.username }}
                                     {% if form.errors.username %}
                                         <label class="text-danger">{{ form.errors.username }}</label>
                                     {% endif %}
                                 </div>
-                                <div class="form-group">
-                                    <label for="">Email:</label>
+                                <div class="form-outline mb-4">
+                                    <label for="">Email</label>
                                     {{ form.email }}
                                     {% if form.errors.email %}
                                         <label class="text-danger">{{ form.errors.email }}</label>
                                     {% endif %}
                                 </div>
-                                <div class="form-group">
-                                    <label for="">Password:</label>
+                                <div class="form-outline mb-4">
+                                    <label for="">Password</label>
                                     {{ form.password1 }}
                                     {% if form.errors.password1 %}
                                         <label class="text-danger">{{ form.errors.password1 }}</label>
                                     {% endif %}
                                 </div>
-                                <div class="form-group">
-                                    <label for="">Confirm password:</label>
+                                <div class="form-outline mb-4">
+                                    <label for="">Confirm password</label>
                                     {{ form.password2 }}
                                     {% if form.errors.password2 %}
                                         <label class="text-danger">{{ form.errors.password2 }}</label>
                                     {% endif %}
                                 </div>
-                                <button type="submit" class="btn float-end shadow btn-success px-4">Register</button>
+                                <button type="submit" class="btn btn-success btn-block form-control">Register</button>
                             </form>
                         </div>
                     </div>
