--- a/E-commerce/store/templates/store/cart.html
+++ b/E-commerce/store/templates/store/cart.html
@@ -38,7 +38,7 @@
                                                            name="quantity"
                                                            class="form-control qty-input text-center"
                                                            value="{{ item.product_qty }}">
-                                                    <button class="input-group-text changeQuantity increment-btn">+</button>
+                                                           <button class="input-group-text changeQuantity increment-btn" id="cartPageIncrementButton">+</button>    
                                                 </div>
                                             {% else %}
                                                 <label class = "badge bg-danger p-2">Out of stock</label>
