added wishlist functionality

--- a/E-commerce/store/templates/store/products/view.html
+++ b/E-commerce/store/templates/store/products/view.html
@@ -74,7 +74,7 @@
                                                     Add to Cart<i class="fa fa-shopping-cart m-1"></i>
                                                 </button>
                                             {% endif %}
-                                            <button class="btn btn-primary me-3 float-start">
+                                            <button class="btn btn-success add-to-wishlist-btn me-3 float-start">
                                                 Add to Wishlist<i class="fa fa-heart m-1"></i>
                                             </button>
                                         </div>
