--- a/E-commerce/store/templates/store/inc/navbar.html
+++ b/E-commerce/store/templates/store/inc/navbar.html
@@ -26,6 +26,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'cart' %}">Cart <i class="fa fa-shopping-cart m-1"></i> <span class="sr-only"></span></a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="{% url 'wishlist' %}">Wishlist <i class="fa fa-heart"></i> <span class="sr-only"></span></a>
+            </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">  <img src="{% static 'images/person-circle.svg' %}" alt="user-icon"> {{ request.user }} </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
