--- a/E-commerce/store/templates/store/inc/navbar.html
+++ b/E-commerce/store/templates/store/inc/navbar.html
@@ -13,21 +13,21 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item active">
-                <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only"></span></a
+                <li class="nav-item">
+                <a class="nav-link {% if request.resolver_match.url_name == 'home' %}active{% endif %} " href="{% url 'home' %}">Home <span class="sr-only"></span></a
                 >
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'collections' %}">Collections</a>
+                <a class="nav-link {% if request.resolver_match.url_name == 'collections' %}active{% endif %}" href="{% url 'collections' %}">Collections</a>
             </li>
 
             
             {% if request.user.is_authenticated %}
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'cart' %}">Cart <i class="fa fa-shopping-cart m-1"></i> <span class="sr-only"></span></a>
+                <a class="nav-link {% if request.resolver_match.url_name == 'cart' %}active{% endif %}" href="{% url 'cart' %}">Cart <i class="fa fa-shopping-cart m-1"></i> <span class="sr-only"></span></a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'wishlist' %}">Wishlist <i class="fa fa-heart"></i> <span class="sr-only"></span></a>
+                <a class="nav-link {% if request.resolver_match.url_name == 'wishlist' %}active{% endif %}" href="{% url 'wishlist' %}">Wishlist <i class="fa fa-heart"></i> <span class="sr-only"></span></a>
             </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">  <img src="{% static 'images/person-circle.svg' %}" alt="user-icon"> {{ request.user }} </a>
@@ -49,10 +49,10 @@
             </li>
         {% else %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'loginpage' %}">Login</a>
+                <a class="nav-link {% if request.resolver_match.url_name == 'loginpage' %}active{% endif %}" href="{% url 'loginpage' %}">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'register' %}">Register</a>
+                <a class="nav-link {% if request.resolver_match.url_name == 'register' %}active{% endif %}" href="{% url 'register' %}">Register</a>
             </li>
         {% endif %}
     </ul>
