--- a/E-commerce/store/templates/store/layouts/main.html
+++ b/E-commerce/store/templates/store/layouts/main.html
@@ -39,7 +39,9 @@
             font-weight:600;
             min-width:45px;
           }
-
+          .active{
+             font-weight:800;
+          }
         </style>
     </head>
     <body>
