--- a/E-commerce/store/templates/store/cart.html
+++ b/E-commerce/store/templates/store/cart.html
@@ -55,7 +55,7 @@
                                 </div>
                             {% endfor %}
         
-            <a href="{% url 'checkout' %}" class="btn btn-outline-success float-end "> Chectout</a>
+            <a href="{% url 'checkout' %}" class="btn btn-outline-success float-end "> Checkout</a>
 
         
                            
