--- a/E-commerce/store/templates/store/auth/login.html
+++ b/E-commerce/store/templates/store/auth/login.html
@@ -14,7 +14,7 @@
                                 <hr>
                                 <div class="form-outline mb-4">
                                     <label class="form-label" for="form2Example1">Username</label>
-                                   <input type="text" class="form-control" name="username" placeholder="Enter Username">
+                                    <input type="text" class="form-control" name="username" placeholder="Enter Username">
                                 </div>
                                 <div  class="form-outline mb-4">
                                     <label class="form-label" for="form2Example2">Password</label>
@@ -24,6 +24,7 @@
 
                                 <div class="text-center mt-4">
                                     <p>Not a member? <a href="{%url 'register'%}">Register</a></p>
+                                    <p><a href="{%url 'forget_password'%}">Forgot Password</a></p>
                                 </div>
                             </form>
                         </div>
