--- a/E-commerce/store/templates/store/layouts/main.html
+++ b/E-commerce/store/templates/store/layouts/main.html
@@ -59,6 +59,14 @@
         <script src="{% static '/js/custom.js' %}"></script>
         <script src="{% static '/js/owl.carousel.min.js' %}"></script>
 
+        <!--===== Sweet alert JS =====-->
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+        {% if messages %} {% for message in messages %} {% if message.tags %}
+            <script>
+                swal("{{message}}");
+            </script>
+        {% endif %} {% endfor %} {% endif %}
 
         {% comment %} jquery {% endcomment %}
         <script
