--- a/E-commerce/store/templates/store/auth/login.html
+++ b/E-commerce/store/templates/store/auth/login.html
@@ -24,6 +24,7 @@
 
                                 <div class="text-center mt-4">
                                     <p>Not a member? <a href="{%url 'register'%}">Register</a></p>
+                                    <p><a href="{%url 'forget_password'%}">Forgot Password</a></p>
                                 </div>
                             </form>
                         </div>
