--- a/E-commerce/store/templates/store/inc/navbar.html
+++ b/E-commerce/store/templates/store/inc/navbar.html
@@ -53,7 +53,7 @@
                             <a class="dropdown-item" href="{% url 'myorders'%}">My Orders</a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">Another action</a>
+                            <a class="dropdown-item" href="{% url 'checkout' %}">Profile</a>
                         </li>
                         <li>
                             <hr class="dropdown-divider">
