--- a/E-commerce/store/templates/store/auth/login.html
+++ b/E-commerce/store/templates/store/auth/login.html
@@ -13,8 +13,8 @@
                                 </div>
                                 <hr>
                                 <div class="form-outline mb-4">
-                                    <label class="form-label" for="form2Example1">Username</label>
-                                   <input type="text" class="form-control" name="username" placeholder="Enter Username">
+                                    <label class="form-label" for="form2Example1">Email</label>
+                                   <input type="Email" class="form-control" name="username" placeholder="Enter Email">
                                 </div>
                                 <div  class="form-outline mb-4">
                                     <label class="form-label" for="form2Example2">Password</label>
