--- a/E-commerce/store/templates/store/auth/login.html
+++ b/E-commerce/store/templates/store/auth/login.html
@@ -14,7 +14,7 @@
                                 <hr>
                                 <div class="form-outline mb-4">
                                     <label class="form-label" for="form2Example1">Email</label>
-                                   <input type="Email" class="form-control" name="username" placeholder="Enter Email">
+                                   <input type="Email" class="form-control" name="email" placeholder="Enter Email">
                                 </div>
                                 <div  class="form-outline mb-4">
                                     <label class="form-label" for="form2Example2">Password</label>
