--- a/E-commerce/store/templates/store/products/index.html
+++ b/E-commerce/store/templates/store/products/index.html
@@ -23,8 +23,8 @@
                                     <img src="{{ item.product_image.url }}" alt="Product image" class="w-100" />
                                 </div>
                                 <h4 class="text-center">{{ item.name }}</h4>
-                                <span class="float-start">{{ item.original_price | stringformat:'d' }}</span>
-                                <span class="float-end">{{ item.selling_price | stringformat:'d' }}</span>
+                                <span class="float-start"> <s>{{ item.original_price | stringformat:'d' }} EGP</s></span>
+                                <span class="float-end">{{ item.selling_price | stringformat:'d' }} EGP</span>
                             </div>
                         </a>
                     </div>
