--- a/E-commerce/store/templates/store/collections.html
+++ b/E-commerce/store/templates/store/collections.html
@@ -18,11 +18,11 @@
                 <div class= "row">
                     {% for item in category %}
                         <div class= "col-md-3">
-                            <div class= "card">
+                            <div class= "card" style="height: 23rem;" >
                                 <a href="{% url 'collectionsview' item.slug %}">
                                     <div class= "card-body">
                                         <div class= "category-image">
-                                            <img src="{{ item.image.url }}" alt="Category image" class="img-fluid">
+                                            <img src="{{ item.image.url }}" alt="Category image" width="100%" height="300">
                                         </div>
                                         <h4 class="text-center">{{ item.name }}</h4>
                                     </div>
