--- a/E-commerce/store/templates/store/products/view.html
+++ b/E-commerce/store/templates/store/products/view.html
@@ -58,13 +58,16 @@
                                         <div class="col-md-3">
                                             {% csrf_token %}
                                             <input type="hidden" value= "{{ products.id }}" class="prod_id">
+                                            <input type="hidden" value= "{{ products.quantity }}" class="prod_quantity">
                                             <label for="Quantity">Quantity</label>
                                             <div class="input-group text-center mb-3" style="width:130px;">
                                                 <button class="input-group-text decrement-btn">-</button>
                                                 <input type="text"
+                                                        max="{{ products.quantity }}"
                                                        name='quantity'
                                                        class="form-control qty-input text-center"
-                                                       value="1">
+                                                       value="1"
+                                                       >
                                                 <button class="input-group-text increment-btn">+</button>
                                             </div>
                                         </div>
