Fixed search bar\

--- a/E-commerce/store/templates/store/layouts/main.html
+++ b/E-commerce/store/templates/store/layouts/main.html
@@ -77,7 +77,7 @@
           var availableTags = [];
           $.ajax({
             method: "Get",
-            url: "/proceed-list",
+            url: "/product-list",
             success: function (response)
             {
               startAutocomplete(response);
