--- a/E-commerce/store/templates/store/collections.html
+++ b/E-commerce/store/templates/store/collections.html
@@ -54,8 +54,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
 
-<div class="row align-items-center justify-content-center">
-<canvas id="myChart" style =" width:20px; max-width:10px height:10px; display:flex"></canvas>
+<div class="row align-items-center justify-content-center" style="height:40vh; width:80vw; position: relative; margin: auto">
+    <canvas id="myChart"></canvas>
 </div>
 <script>
 var xValues = {{categorynames|safe}};
@@ -72,6 +72,8 @@ new Chart("myChart", {
     }]
   },
   options: {
+    maintainAspectRatio: false,
+    responsive: true,
     title: {
       display: true,
       text: "Collections"
