--- a/E-commerce/store/templates/store/auth/acc_active_email.html
+++ b/E-commerce/store/templates/store/auth/acc_active_email.html
@@ -1,5 +1,5 @@
 {% autoescape off %}  
 Hi {{ user.username }},  
-Please click on the link to confirm your registration,  
-http://{{ domain }}{% url 'activate' uidb64=uid token=token %}  
+Please follow the link below to complete the registeration!
+http://{{ domain }}{% url 'passwordForm' uidb64=uid token=token %}  
 {% endautoescape %}  
