added profile page, with fname and lname in models, mark: fixed some bugs

--- a/E-commerce/store/templates/store/checkout.html
+++ b/E-commerce/store/templates/store/checkout.html
@@ -21,14 +21,14 @@
 
 
                                 <label for="">First Name</label>
-                                <input type="text" required class="form-control" value="{{ request.user.first_name }}"
+                                <input type="text" required class="form-control" value="{{ userprofile.first_name }}"
                                     name="fname" placeholder="Enter first name">
                             </div>
                             <div class="col-md-6">
 
 
                                 <label for="">Last Name</label>
-                                <input type="text" required class="form-control" value="{{ request.user.last_name }}"
+                                <input type="text" required class="form-control" value="{{ userprofile.last_name }}"
                                     name="lname" placeholder="Enter last name">
                             </div>
                             <div class="col-md-6 mt-2">
