added profile page for each user can update it's content

--- a/E-commerce/store/templates/store/auth/forget_password.html
+++ b/E-commerce/store/templates/store/auth/forget_password.html
@@ -1,9 +1,7 @@
-{% extends 'store/layouts/main.html' %}
-{% block content %}
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
+<!-- Include the above in your HEAD tag -->
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <div class="form-gap"></div>
@@ -40,4 +38,4 @@
 	</div>
 </div>
 
-{% endblock content %}
+
