--- a/E-commerce/store/templates/store/profile.html
+++ b/E-commerce/store/templates/store/profile.html
@@ -7,7 +7,7 @@
     </div>
 </div>
 <div class="container mt-4">
-    <form action="" method="POST">
+    <form action="{% url 'profileForm' %}" method="POST">
         {% csrf_token %}
         <div class="row">
             <div class="col-md-6 ">
@@ -82,6 +82,13 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6">
+                <div class="col-md-6">
+                    <label class="header">Profile Photo:</label>    
+                    <img src="static/{{userprofile.profile_image}}" alt="profile image" width="80%" height="250" class="rounded-2 mx-2">
+                </div>
+                
+                <div>
         </div>
     </form>
 </div>
