tarik'work : added ads and footer

--- a/E-commerce/store/templates/store/layouts/main.html
+++ b/E-commerce/store/templates/store/layouts/main.html
@@ -52,6 +52,7 @@
         {% include 'store/inc/navbar.html' %}
         {% block content %}
         {% endblock content %}
+        {% include 'store/inc/footer.html' %}
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         
