--- a/E-commerce/store/templates/store/collections.html
+++ b/E-commerce/store/templates/store/collections.html
@@ -10,7 +10,7 @@
                href='{% url 'collections' %}'>Collections</a>
         </div>
     </div>
-    <div class= "container">
+    <div class= "container ml-3">
         <div class= "row">
             <div class= "col-md-12">
                 <h1>Collections</h1>
@@ -31,7 +31,9 @@
                         </div>
                     {% endfor %}
                 </div>
+                
             </div>
         </div>
+        
     </div>
 {% endblock content %}
