--- a/E-commerce/store/templates/store/inc/slider.html
+++ b/E-commerce/store/templates/store/inc/slider.html
@@ -49,43 +49,60 @@
     
 </head>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<div class="container-fluid ">
+  <div class="row">
+<div class="col-lg-2 mx-auto">
+  <div class="float-left d-inline">
+    <a href="//www.comebackalive.in.ua/donate2?utm_source=Blockthrough&amp;utm_medium=EU&amp;utm_campaign=ComeBackAlive" target="_blank""><img src="/static/images/ad.png"></a>
+</div>
+</div>
 
-<div id="carouselExampleControls"
-     class="carousel slide"
-     data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100 d-inline-block"
-                 height = "450px"
-                 src="{% static 'images/c-d-x-PDX_a_82obo-unsplash.jpg' %}"
-                 alt="First slide">
-        </div>
-        <div class="carousel-item ">
-            <img class="d-block w-100 d-inline-block"
-                 height = "450px"
-                 src="{% static 'images/pexels-alex-andrews-821651.jpg' %}"
-                 alt="Second slide">
-        </div>
-        <div class="carousel-item ">
-            <img class="d-block w-100 d-inline-block"
-                 height = "450px"
-                 src="{% static 'images/pexels-gabriel-freytez-341523.jpg' %}"
-                 alt="Third slide">
-        </div>
-    </div>
-    <a class="carousel-control-prev"
-       href="#carouselExampleControls"
-       role="button"
-       data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </a>
-    <a class="carousel-control-next"
-       href="#carouselExampleControls"
-       role="button"
-       data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </a>
+    <div class="col-lg-8">
+      <div id="carouselExampleControls"
+      class="carousel slide"
+      data-ride="carousel">
+     <div class="carousel-inner">
+         <div class="carousel-item active">
+             <img class="d-block w-100 d-inline-block"
+                  height = "450px"
+                  src="{% static 'images/c-d-x-PDX_a_82obo-unsplash.jpg' %}"
+                  alt="First slide">
+         </div>
+         <div class="carousel-item ">
+             <img class="d-block w-100 d-inline-block"
+                  height = "450px"
+                  src="{% static 'images/pexels-alex-andrews-821651.jpg' %}"
+                  alt="Second slide">
+         </div>
+         <div class="carousel-item ">
+             <img class="d-block w-100 d-inline-block"
+                  height = "450px"
+                  src="{% static 'images/pexels-gabriel-freytez-341523.jpg' %}"
+                  alt="Third slide">
+         </div>
+     </div>
+     <a class="carousel-control-prev"
+        href="#carouselExampleControls"
+        role="button"
+        data-slide="prev">
+         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+         <span class="visually-hidden">Previous</span>
+     </a>
+     <a class="carousel-control-next"
+        href="#carouselExampleControls"
+        role="button"
+        data-slide="next">
+         <span class="carousel-control-next-icon" aria-hidden="true"></span>
+         <span class="visually-hidden">Next</span>
+     </a>
+ </div>
+</div>
+<div class="col-lg-2 mx-auto">
+  <div class="float-left d-inline">
+    <a href="//www.comebackalive.in.ua/donate2?utm_source=Blockthrough&amp;utm_medium=EU&amp;utm_campaign=ComeBackAlive" target="_blank"><img src="/static/images/ad.png"></a>
+</div>
+</div>
+
+  </div>
 </div>
 
