code refactor and changed the mail sending emails

--- a/E-commerce/store/templates/store/inc/footer.html
+++ b/E-commerce/store/templates/store/inc/footer.html
@@ -1,9 +1,9 @@
  {%load static%} 
     <!-- Remove the container if you want to extend the Footer to full width. -->
-    <div class="container my-5">
+    <div class="container my-5 d-flex flex-column min-vh-100">
         <!-- Footer -->
         <footer
-                class="text-center text-lg-start text-white"
+                class="text-center text-lg-start text-white mt-auto"
                 style="background-color: #929fba"
                 >
           <!-- Grid container -->
@@ -52,7 +52,7 @@
                   <a
                      class="btn btn-primary btn-floating m-1"
                      style="background-color: #3b5998"
-                     href="#!"
+                     href="https://www.facebook.com/elhusseinabdalaziz"
                      role="button"
                      ><i class="fa fa-facebook"></i
                     ></a>
@@ -61,7 +61,7 @@
                   <a
                      class="btn btn-primary btn-floating m-1"
                      style="background-color: #55acee"
-                     href="#!"
+                     href="https://twitter.com/elonmusk"
                      role="button"
                      ><i class="fa fa-twitter"></i
                     ></a>
@@ -70,7 +70,7 @@
                   <a
                      class="btn btn-primary btn-floating m-1"
                      style="background-color: #dd4b39"
-                     href="#!"
+                     href="https://www.google.com/"
                      role="button"
                      ><i class="fa fa-google"></i
                     ></a>
@@ -79,7 +79,7 @@
                   <a
                      class="btn btn-primary btn-floating m-1"
                      style="background-color: #ac2bac"
-                     href="#!"
+                     href="https://www.instagram.com/100thieves.esports/"
                      role="button"
                      ><i class="fa fa-instagram"></i
                     ></a>
@@ -88,7 +88,7 @@
                   <a
                      class="btn btn-primary btn-floating m-1"
                      style="background-color: #0082ca"
-                     href="#!"
+                     href="https://www.linkedin.com/in/elhussein-abdalaziz-5b375b225/"
                      role="button"
                      ><i class="fa fa-linkedin"></i
                     ></a>
@@ -96,7 +96,7 @@
                   <a
                      class="btn btn-primary btn-floating m-1"
                      style="background-color: #333333"
-                     href="#!"
+                     href="https://github.com/elhusseinn"
                      role="button"
                      ><i class="fa fa-github"></i
                     ></a>
