added Essam's email

--- a/E-commerce/store/templates/store/inc/footer.html
+++ b/E-commerce/store/templates/store/inc/footer.html
@@ -40,7 +40,7 @@
                   <p><i class="fa fa-envelope mr-3"></i> tarekkandil352@yahoo.com</p>
                   <p><i class="fa fa-envelope mr-3"></i> leonlord0@gmail.com</p>
                   <p><i class="fa fa-envelope mr-3"></i> MarkSamirf@gmail.com</p>
-                  <p><i class="fa fa-envelope mr-3"></i> + 01 234 567 89</p>
+                  <p><i class="fa fa-envelope mr-3"></i> mailto:messamb26@gmail.com</p>
                 </div>
                 <!-- Grid column -->
       
